back and front gestionnaire

--- a/templates/gestionnaire/index.html.twig
+++ b/templates/gestionnaire/index.html.twig
@@ -9,12 +9,11 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Iden_ges</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>Nom_ges</th>
-                <th>Pren_ges</th>
-                <th>actions</th>
+                <th>Identifiant du Gestionnaire :</th>
+                <th>Roles :</th>
+                <th>Nom :</th>
+                <th>Prénom :</th>
+                <th>actions :</th>
             </tr>
         </thead>
         <tbody>
@@ -23,12 +22,11 @@
                 <td>{{ gestionnaire.id }}</td>
                 <td>{{ gestionnaire.idenGes }}</td>
                 <td>{{ gestionnaire.roles ? gestionnaire.roles|json_encode : '' }}</td>
-                <td>{{ gestionnaire.password }}</td>
                 <td>{{ gestionnaire.nomGes }}</td>
                 <td>{{ gestionnaire.prenGes }}</td>
                 <td>
-                    <a href="{{ path('gestionnaire_show', {'id': gestionnaire.id}) }}">show</a>
-                    <a href="{{ path('gestionnaire_edit', {'id': gestionnaire.id}) }}">edit</a>
+                    <a href="{{ path('gestionnaire_show', {'id': gestionnaire.id}) }}">Voir</a>
+                    <a href="{{ path('gestionnaire_edit', {'id': gestionnaire.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
