--- a/templates/utilisateurs/edit.html.twig
+++ b/templates/utilisateurs/edit.html.twig
@@ -14,7 +14,7 @@
 
  {% form_theme registrationForm 'bootstrap_5_layout.html.twig' %}
 
-{% block title %}Edit Utilisateurs{% endblock %}
+{% block title %}Modifier Utilisateurs{% endblock %}
 
 {% block body %}
     {{ include('header.html.twig') }}
