--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
     </head>
     <body>
         {% block body %}
-           <div class="container">
+           <div class="container-fluid">
 
            </div>
         {% endblock %}
