--- a/templates/gestionnaire/edit.html.twig
+++ b/templates/gestionnaire/edit.html.twig
@@ -3,11 +3,40 @@
 {% block title %}Edit Gestionnaire{% endblock %}
 
 {% block body %}
-    <h1>Edit Gestionnaire</h1>
+    {{ include('header.html.twig') }}
+    <div class="container-fluid">
+        <h1 class="text-center mb-3 mt-3">Modifier Gestionnaire</h1>
+        <div class="row">
+            <div class="cube col-sm-9 ms-4">
+                {{ form_start(form) }}
+                <div class="row">
+                    <div class="col-sm-6 mt-1">
+                        {{ form_label(form.iden_ges) }}
+                        {{ form_widget(form.iden_ges) }}
+                    </div>
+                    <div class="col-sm-6 mt-1">
+                        {{ form_label(form.nom_ges) }}
+                        {{ form_widget(form.nom_ges) }}
+                    </div>
+                    <div class="col-sm-6 mt-1">
+                        {{ form_label(form.pren_ges) }}
+                        {{ form_widget(form.pren_ges) }}
+                    </div>
+                    <div class="col-sm-6 mt-1">
+                        {{ form_label(form.roles) }}
+                        {{ form_widget(form.roles) }}
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="btn">{{ button_label|default('Enregistrer') }}</button>
+                </div>
+                {{ form_end(form) }}
+            </div>
 
-    {{ include('gestionnaire/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('gestionnaire_index') }}">back to list</a>
+    <a href="{{ path('gestionnaire_index') }}">Retour à l'index</a>
 
     {{ include('gestionnaire/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
