--- a/templates/gestionnaire/_delete_form.html.twig
+++ b/templates/gestionnaire/_delete_form.html.twig
@@ -1,4 +1,6 @@
 <form method="post" action="{{ path('gestionnaire_delete', {'id': gestionnaire.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ gestionnaire.id) }}">
+    <div class="d-grid gap-2">
     <button class="btn">Supprimer</button>
+    </div>
 </form>
