--- a/templates/gestionnaire/edit.html.twig
+++ b/templates/gestionnaire/edit.html.twig
@@ -1,5 +1,19 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset("assets/css/create_ut.css") }}" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+{% endblock %}
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
+{% endblock %}
+
+ {% form_theme form 'bootstrap_5_layout.html.twig' %}
+
 {% block title %}Edit Gestionnaire{% endblock %}
 
 {% block body %}
@@ -27,15 +41,17 @@
                         {{ form_widget(form.roles) }}
                     </div>
                 </div>
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center mt-3">
                     <button class="btn">{{ button_label|default('Enregistrer') }}</button>
                 </div>
                 {{ form_end(form) }}
             </div>
+            <div class="menu col-md-2 ms-3">
+                <div class="d-grid gap-2 mt-3">
+                    {{ include('gestionnaire/_delete_form.html.twig') }}
 
-    <a href="{{ path('gestionnaire_index') }}">Retour à l'index</a>
-
-    {{ include('gestionnaire/_delete_form.html.twig') }}
+                    <a href="{{ path('gestionnaire_index') }}" class="btn">Retour à l'index</a>
+                </div>
             </div>
         </div>
     </div>
