--- a/templates/utilisateurs/index.html.twig
+++ b/templates/utilisateurs/index.html.twig
@@ -70,7 +70,6 @@
                             <a href="{{ path('utilisateurs_edit', {'id': utilisateur.id}) }}">Modifier</a>
                         </td>
                         {% endfor %}
-
                     </tr>
                 </tbody>
             </table>
@@ -80,6 +79,15 @@
             <div class="d-grid gap-2 mt-3">
                 <a href="{{ path('utilisateurs_new') }}" class="btn">Créer nouvelle utilisateur</a>
                 <a href="{{ path('search') }}" class="btn">Rechercher</a>
+
+                <!--regarder pour le if ?-->
+
+                % if utilisateurs.gere.roles == ['ROLE_SADMIN'] %}
+
+                <a href="{{ path('gestionnaire_index') }}" class="btn">Gérer les gestionnaires</a>
+
+                % endif %}
+
             </div>
         </div>
     </div>
