--- a/templates/search/search.html.twig
+++ b/templates/search/search.html.twig
@@ -59,6 +59,7 @@
                             {% endfor %}
                     </tbody>
                 </table>
+                <a class="me-2 ms-2">{{ knp_pagination_render(users) }}</a>
             </div>
             <div class="menu col-md-2 ms-3">
                 <div class="d-grid gap-2 m-3">
